--- a/themes/landscape/layout/_widget/follow_me.ejs
+++ b/themes/landscape/layout/_widget/follow_me.ejs
@@ -2,31 +2,31 @@
   <div class="widget follow_me">
     <h5 class="widget-title"><%= __('follow_me') %></h5>
     <a title="Discord" href="https://discord.gg/C44ZbDG" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/discord.png" alt="Discord">
+      <img src="https://blog.lucasalt.fr/img/icons/discord.png" alt="Discord">
     </a>
     <a title="Github" href="https://github.com/MrDragonXM15" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/github.png" alt="Github">
+      <img src="https://blog.lucasalt.fr/img/icons/github.png" alt="Github">
     </a>
     <a title="Twitter" href="https://twitter.com/MrDragonXM15" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/twitter.png" alt="Twitter">
+      <img src="https://blog.lucasalt.fr/img/icons/twitter.png" alt="Twitter">
     </a>
     <a title="Reddit" href="https://www.reddit.com/user/MrDragonXM15/" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/reddit.png" alt="Reddit">
+      <img src="https://blog.lucasalt.fr/img/icons/reddit.png" alt="Reddit">
     </a>
     <a title="Mastodon" href="https://mstdn.io/web/accounts/48290" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/mastodon.png" alt="Mastondon">
+      <img src="https://blog.lucasalt.fr/img/icons/mastodon.png" alt="Mastondon">
     </a>
     <a title="Steam" href="http://steamcommunity.com/id/MrDragonXM15/" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/steam.png" alt="Steam">
+      <img src="https://blog.lucasalt.fr/img/icons/steam.png" alt="Steam">
     </a>
     <a title="Soundcloud" href="https://soundcloud.com/lucasctrlalt" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/soundcloud.png" alt="Soundcloud">
+      <img src="https://blog.lucasalt.fr/img/icons/soundcloud.png" alt="Soundcloud">
     </a>
     <a title="Google+" href="https://plus.google.com/116458975769080334662" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/google-plus.png" alt="Google Plus"> 
+      <img src="https://blog.lucasalt.fr/img/icons/google-plus.png" alt="Google Plus"> 
     </a>
     <a title="Tipeee" href="https://www.tipeee.com/lucasalt" target="_blank">
-      <img src="https://blog.lucasalt.fr/img/tipeee.png" alt="Tipeee" class="tipeee">
+      <img src="https://blog.lucasalt.fr/img/icons/tipeee.png" alt="Tipeee" class="tipeee">
     </a>
   </div>
 </div>
