start legal mentions

--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -22,6 +22,10 @@ input, button
        url(font-icon-path + ".ttf?v=#" + font-icon-version) format("truetype"),
        url(font-icon-path + ".svg#fontawesomeregular?v=#" + font-icon-version) format("svg")
 
+@font-face
+  font-family: Open-sans
+  src: url(font-icon-path + ".ttf?v=#" + font-icon-version) format("truetype")
+
 html, body, #container
   height: 100%
 
