--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -4,7 +4,9 @@
   <% } %>
   <div class="outer">
     <div id="footer-info" class="inner">
-      &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
+      <span class="fa fa-creative-commons"></span> <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
+      Ce blog n'existerait pas sans les licences libres <span class="fa fa-heart" style="color: red">  </span>
+      <a href="./mentions-legales/">Mentions légales</a>.<br>
       <%= __('powered_by') %> <a href="http://hexo.io/" target="_blank">Hexo</a><br>
     </div>
   </div>
