POST : Review Asus Vivobook
Edit some scaffolds, add an atom feed, change some links

--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -6,7 +6,7 @@
     <div id="footer-info" class="inner">
       <span class="fa fa-copyright"></span> <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
       Ce blog n'existerait pas sans les licences libres <span class="fa fa-heart" style="color: red">  </span>
-      <a href="./mentions-legales/">Mentions légales</a>.<br>
+      <a href="https://blog.lucasalt.fr/mentions-legales/">Mentions légales</a>.<br>
       <%= __('powered_by') %> <a href="http://hexo.io/" target="_blank">Hexo</a><br>
     </div>
   </div>
