--- a/themes/landscape/source/css/_partial/sidebar.styl
+++ b/themes/landscape/source/css/_partial/sidebar.styl
@@ -31,7 +31,7 @@ else
 
 .tagcloud
   a
-    font-size: 14px !important
+    font-size: 14px
     margin-right: 5px
     display: inline-block
   a:before
