DRAFT : chope/october update

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -69,6 +69,8 @@
     margin: auto
   iframe
     border: none
+    display: block
+    margin: auto
   table
     width: 100%
     border-collapse: collapse
